namespace SampleAPI.Entities;

public enum BookCopyStatus
{
    Available = 1,
    Rented = 2,
    Reserved = 3,
    Lost = 4,
    Maintenance = 5
}
