namespace SampleAPI.Entities;

public enum CustomerStatus
{
    Active = 1,
    Suspended = 2,
    Closed = 3
}
