namespace SampleAPI.Entities;

public enum RentalStatus
{
    Open = 1,
    Closed = 2,
    Overdue = 3,
    Cancelled = 4
}
