namespace SampleAPI.Entities;

public enum ReservationStatus
{
    Active = 1,
    Fulfilled = 2,
    Cancelled = 3,
    Expired = 4
}
